--- a/templates/base.html
+++ b/templates/base.html
@@ -197,5 +197,6 @@
             <p class="text-gray-500">Copyright (c) 2025 Bluetorch Consulting Ltd. This is an open data project to support transparency.</p>
         </div>
     </footer>
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html>
