Compute percent-change factoids

--- a/council_finance/templates/council_finance/factoid_form.html
+++ b/council_finance/templates/council_finance/factoid_form.html
@@ -70,6 +70,7 @@ async function updatePreview(){
     url.searchParams.append('counter', counter);
     url.searchParams.append('council', document.getElementById('preview-council').value);
     url.searchParams.append('year', document.getElementById('preview-year').value);
+    url.searchParams.append('type', typeField.value);
     url.searchParams.append('text', textField.value);
     try{
         const resp = await fetch(url, {headers:{'X-Requested-With':'XMLHttpRequest'}});
