Refine compare basket UI and header

--- a/council_finance/templates/council_finance/compare_row.html
+++ b/council_finance/templates/council_finance/compare_row.html
@@ -1,6 +1,6 @@
 <tr class="border-b">
-    <td class="px-2 py-1 font-semibold">{{ field.name|capfirst }}</td>
+    <td class="px-4 py-2 font-semibold sticky left-0 bg-white z-0">{{ field.name|capfirst }}</td>
     {% for v in values %}
-    <td class="px-2 py-1">{{ v }}</td>
+    <td class="px-4 py-2">{{ v }}</td>
     {% endfor %}
 </tr>
