--- a/council_finance/templates/council_finance/field_list.html
+++ b/council_finance/templates/council_finance/field_list.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% load extras %}
-{% block title %}Fields - Council Finance Counters{% endblock %}
+{% block title %}Fields & Characteristics - Council Finance Counters{% endblock %}
 {% block content %}
-<h1 class="text-2xl font-bold mb-4">Fields Manager</h1>
+<h1 class="text-2xl font-bold mb-4">Fields &amp; Characteristics</h1>
 <p class="mb-4">Existing fields are shown below. Click a name to edit or use <strong>Add field</strong> to create a new one.</p>
 <div class="mb-4 text-right">
     <a href="{% url 'field_add' %}" class="bg-blue-600 text-white px-4 py-1 rounded">Add field</a>
