Skip council_name in data issues and hide year column

--- a/council_finance/templates/council_finance/data_issues_table.html
+++ b/council_finance/templates/council_finance/data_issues_table.html
@@ -4,7 +4,9 @@
         <tr>
             <th class="px-2 py-1 text-left sortable" data-sort="council">Council</th>
             <th class="px-2 py-1 text-left sortable" data-sort="field">Field</th>
+            {% if show_year %}
             <th class="px-2 py-1 text-left sortable" data-sort="year">Year</th>
+            {% endif %}
             {% if issue_type == 'suspicious' %}
             <th class="px-2 py-1 text-left sortable" data-sort="value">Value</th>
             {% endif %}
@@ -15,13 +17,15 @@
         <tr class="border-b">
             <td class="px-2 py-1"><a href="{% url 'council_detail' d.council.slug %}?tab=edit&year={{ d.year }}" class="underline">{{ d.council.name }}</a></td>
             <td class="px-2 py-1">{{ d.field.name }}</td>
+            {% if show_year %}
             <td class="px-2 py-1">{{ d.year }}</td>
+            {% endif %}
             {% if issue_type == 'suspicious' %}
             <td class="px-2 py-1">{{ d.value }}</td>
             {% endif %}
         </tr>
     {% empty %}
-        <tr><td class="px-2 py-1 text-center" colspan="{% if issue_type == 'suspicious' %}4{% else %}3{% endif %}">No data issues.</td></tr>
+        <tr><td class="px-2 py-1 text-center" colspan="{% if issue_type == 'suspicious' %}{% if show_year %}4{% else %}3{% endif %}{% else %}{% if show_year %}3{% else %}2{% endif %}{% endif %}">No data issues.</td></tr>
     {% endfor %}
     </tbody>
 </table>
